precursor gubernatorial report

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -171,6 +171,116 @@
 
             <br><br>
 
+            <details>
+                <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline;">The Precursor: Where We're Basically At, Before the Race is Finished and Before 
+                    Everything is Verified
+                </summary>
+                The Governor's Race: Is Cumberland County Even On Their Radar?
+                As primary season winds down, voters across New Jersey are narrowing their focus. But for those of us in Cumberland County, one question remains stubbornly unanswered: 
+                Do any of these gubernatorial candidates actually care about us?
+                <br>
+                Over the past two years, I’ve been documenting political campaigns and transparency here in Cumberland County through InformTheVoteNJ.com. It’s been a deep dive — one 
+                that started with local races but inevitably led me to this: the 2025 race for Governor. It’s a big race, with major implications for our schools, infrastructure, 
+                economy, and basic visibility. And yet, it remains incredibly unclear whether the people running for the highest office in the state even know what’s happening down here.
+                <br>
+                So here’s my take — not from the perspective of a party operative or political insider, but from a voter who’s gone far beyond the average effort to stay informed. 
+                Below is a snapshot of each gubernatorial candidate and their engagement (or lack thereof) with Cumberland County and South Jersey at large.
+                <br>
+                <br>
+                DEMOCRATIC CANDIDATES
+                <br>
+                Steve Sweeney
+                <br>
+                Sweeney is technically from South Jersey — Gloucester County — which gives him a presumed familiarity with regional issues. Campaign mail has arrived at my family’s 
+                home, and he’s reportedly been endorsed by the Cumberland County Democratic Party. But beyond that, there’s been no direct contact or evidence of outreach. He may have 
+                mentioned Cumberland County once or twice during the Democratic debate, but nothing substantial stands out. He also did not respond to outreach from InformTheVoteNJ.
+                <br>
+                Verdict: Knows the region, but has not made his presence felt locally.
+                <br>
+                <br>
+                Josh Gottheimer
+                <br>
+                Gottheimer has not publicly addressed Cumberland County issues to date. He is, however, scheduled to do a meet and greet in the area tomorrow, at Double Eagle Saloon in 
+                Vineland — just a few weeks before the primary. While this could signal a late-game attempt to connect with voters here, it's unclear whether it’s genuine engagement or 
+                performative optics. One of his staffers initially opened the door to more outreach or interviews, but ultimately failed to follow through.
+                <br>
+                Verdict: Possibly coming around, but far too late to demonstrate meaningful interest.
+                <br>
+                <br>
+                Mikie Sherrill, Sean Spiller, and Ras Baraka
+                <br>
+                These three candidates are grouped together because they’ve demonstrated the same pattern: complete absence from the conversation in South Jersey. No events. No mentions. 
+                No responses to outreach.
+                <br>
+                Verdict: No presence, no engagement, no apparent interest.
+                <br>
+                <br>
+                Steve Fulop
+                <br>
+                To his credit, Fulop did show up in Vineland for a meet and greet at Bob Morgan Entertainment. It was a positive and pivotal moment in my own election coverage journey, 
+                as his running mates Brandon Saffold and Carolyn Rush committed to an interview and participation with InformTheVoteNJ. Fulop discussed broad themes like wind energy 
+                and the decline of local press. He was supportive of reintroducing civics education but didn’t offer tangible solutions for issues like infrastructure, voter outreach,
+                or county-level press collapse. As a North Jersey mayor, his focus still seems tilted toward that region.
+                <br>
+                Verdict: Showed up and engaged — more than most — but unclear if he sees us as a priority.
+                <br>
+                <br>
+                REPUBLICAN CANDIDATES
+                <br>
+                <br>
+                Jon Bramnick
+                <br>
+                There’s been no visible effort from Bramnick to engage with southern NJ, let alone Cumberland County.
+                <br>
+                Verdict: Absent from the region.
+                <br>
+                Jack Ciattarelli
+                Ciattarelli has appeared multiple times at Republican events in the area over the past six months and has the endorsement of the local Republican party. He’s clearly 
+                connected with State Senator Mike Testa, which could offer a pipeline for local concerns. During a town hall, I asked him about civics education and the role of counties 
+                in gathering candidate information. He supported civics education but dismissed the idea of incentivizing press coverage, which felt out of step with our media reality. 
+                He hasn’t explicitly addressed issues facing Cumberland County, but the infrastructure to listen and respond appears to be in place.
+                <br>
+                Verdict: Connected and visible, but specifics are lacking.
+                <br>
+                <br>
+                Bill Spadea
+                Spadea has held events within an hour’s drive of Cumberland County and publicly responded to a voter question about election integrity in Lawrence Township, saying he’d 
+                follow up with an event. He has not followed through. While he seems aware of broader statewide issues, there’s no evidence that he’s zoomed in on what’s happening here.
+                <br>
+                Verdict: Some signs of interest, but no concrete action.
+                <br>
+                <br>
+                Justin Barbera
+                <br>
+                Barbera has done what few others have: he showed up at a local Republican breakfast, listened, and engaged. I was able to interview him for a podcast and ask about 
+                both general voter education and specific county issues like broadband infrastructure and the Nabb Avenue extension. He offered supportive and responsive answers. 
+                He also plans to return to our area soon.
+                <br>
+                Verdict: Responsive, informed, and actively participating in local dialogue.
+                <br>
+                <br>
+                Mario Kranjac
+                <br>
+                Kranjac initially showed interest by replying to outreach, promising to fill out a candidate questionnaire and attend a forum. But he’s been unresponsive since. 
+                No events. No visibility besides brief instagram ads.
+                <br>
+                Verdict: Faded after initial contact — no follow-through.
+                <br>
+                <br>
+                Conclusion: Where Does That Leave Us?
+                <br>
+                Cumberland County often finds itself as an afterthought in statewide elections. This report highlights just how true that still is in 2025. Of the 11 major candidates for 
+                governor, only three — Fulop, Ciattarelli, and Barbera — have meaningfully interacted with our region. And even among them, only one (Barbera) has directly addressed 
+                county-level issues in depth.
+                <br>
+                So as you consider who to vote for, ask yourself: Shouldn’t a governor be someone who sees and hears all of New Jersey — not just the big cities and wealthy suburbs?
+                <br>
+                For full interviews, event listings, and issue breakdowns, visit InformTheVoteNJ.com. If you’re skeptical of this summary, go down the rabbit hole yourself. All the 
+                sources are there. All the outreach attempts are documented. I’m just here to say: I looked. And this is what I found. I'll do a more in-depth report in a week or so.
+            </details>
+
+            <br><br>
+
             Phil Murphy is not seeking re-election, and the Democrats have 6 people in their primary race. Generally speaking, Steve Sweeney is the most establishment-oriented guy 
             with direct experience in state government, Josh Gottheimer and Mikie Sherrill are both moderate congresspeople, Sean Spiller is a bit of an activist teacher with 
             experience as head of the NJEA, and Steve Fulop and Ras Baraka are current mayors who are more of the aggressive reformer types.
