debate videos added to governor page

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -293,22 +293,38 @@
             contractor and grassroots candidate focused on amplifying everyday voters.
         </details>
     </div>
-    <!-- debate videos
-    
-    <div class="video-box-sm">
+
+    <!-- debate videos -->
+    <div class="debate-videos can-sec">
+
+            <div class="video-box-sm">
                 <iframe src="https://www.youtube.com/embed/Q0tkWTtau2w?si=XB-MxLnxE1-16Cdf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <h3 class="video-heading-sm"></h3>
                 <div class="video-sm-desc">
-                    Democrat Gubernatorial Primary Debate
+                    First Democrat Gubernatorial Primary Debate
                 </div>
-            </div> -->
+            </div> 
 
-            <!-- <div class="video-box-sm">
+            <div class="video-box-sm">
+                <iframe src="https://www.youtube.com/embed/Gjwk94DCYKQ?si=pHH8bw_LeoVyK3rq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                <h3 class="video-heading-sm"></h3>
+                <div class="video-sm-desc">
+                    Second Democrat Gubernatorial Primary Debate
+                </div>
+            </div> 
+
+            <div class="video-box-sm">
                 <iframe src="https://www.youtube.com/embed/n7QL3-FcSkg?si=GndeFOcx3LHL1_oG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                <h3 class="video-heading-sm"></h3>
                 <div class="video-sm-desc">
-                    Republican Gubernatorial Primary Debate
+                    First Republican Gubernatorial Primary Debate
                 </div>
-            </div> -->
+            </div>
+
+            <div class="video-box-sm">
+                <iframe src="https://www.youtube.com/embed/2vmOGPNplQw?si=mjmt50QLWav59CDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                <div class="video-sm-desc">
+                    Second Republican Gubernatorial Primary Debate
+                </div>
+            </div>
+    </div>
 
     <div id="sample-ballot">
 
