format video section governors page

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -296,34 +296,37 @@
 
     <!-- debate videos -->
     <div class="debate-videos can-sec">
+        <h2 style="text-align: center">Debates</h2>
+            <details>
+                <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
+                <div class="video-box-sm">
+                    <iframe src="https://www.youtube.com/embed/Q0tkWTtau2w?si=XB-MxLnxE1-16Cdf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h3 class="video-heading-sm"></h3>
+                    <div class="video-sm-desc">
+                        First Democrat Gubernatorial Primary Debate
+                    </div>
+                </div> 
 
-            <div class="video-box-sm">
-                <iframe src="https://www.youtube.com/embed/Q0tkWTtau2w?si=XB-MxLnxE1-16Cdf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <h3 class="video-heading-sm"></h3>
-                <div class="video-sm-desc">
-                    First Democrat Gubernatorial Primary Debate
-                </div>
-            </div> 
+                <div class="video-box-sm">
+                    <iframe src="https://www.youtube.com/embed/Gjwk94DCYKQ?si=pHH8bw_LeoVyK3rq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                <h3 class="video-heading-sm"></h3>
+                    <div class="video-sm-desc">
+                        Second Democrat Gubernatorial Primary Debate
+                    </div>
+                </div> 
 
-            <div class="video-box-sm">
-                <iframe src="https://www.youtube.com/embed/Gjwk94DCYKQ?si=pHH8bw_LeoVyK3rq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                <h3 class="video-heading-sm"></h3>
-                <div class="video-sm-desc">
-                    Second Democrat Gubernatorial Primary Debate
+                <div class="video-box-sm">
+                    <iframe src="https://www.youtube.com/embed/n7QL3-FcSkg?si=GndeFOcx3LHL1_oG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                <h3 class="video-heading-sm"></h3>
+                    <div class="video-sm-desc">
+                        First Republican Gubernatorial Primary Debate
+                    </div>
                 </div>
-            </div> 
 
-            <div class="video-box-sm">
-                <iframe src="https://www.youtube.com/embed/n7QL3-FcSkg?si=GndeFOcx3LHL1_oG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                <h3 class="video-heading-sm"></h3>
-                <div class="video-sm-desc">
-                    First Republican Gubernatorial Primary Debate
+                <div class="video-box-sm">
+                    <iframe src="https://www.youtube.com/embed/2vmOGPNplQw?si=mjmt50QLWav59CDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                <div class="video-sm-desc">
+                        Second Republican Gubernatorial Primary Debate
+                    </div>
                 </div>
-            </div>
-
-            <div class="video-box-sm">
-                <iframe src="https://www.youtube.com/embed/2vmOGPNplQw?si=mjmt50QLWav59CDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                <div class="video-sm-desc">
-                    Second Republican Gubernatorial Primary Debate
-                </div>
-            </div>
+            </details>
     </div>
 
     <div id="sample-ballot">
