county commissioner race quick summary update

--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -122,28 +122,38 @@
           <h4 class="quick-sum">quick summary button</h4>
           <h6 class="page-title">County Commissioner</h6>
 
-            Two seats are open on the Cumberland County Board of Commissioners. On the Republican side, incumbents Doug Albrecht and Victoria Lods are running unopposed in the primary. 
-            While both benefit from the built-in visibility of the bi-weekly Republican breakfast meetings, broader campaign messaging remains sparse. Commissioner Albrecht has 
-            expressed interest in doing an interview and invited us to appear on his radio show this coming Monday. However, he has not yet confirmed that invitation via email—an 
-            important detail, especially as that time slot now directly conflicts with a scheduled interview with Democratic candidate LaRae Smith. Commissioner Lods, for her part, 
-            has not responded to any outreach attempts. 
-            <br>
-            <br>
-            On the Democratic side, three candidates—John Capizola, Yolanda Balicki, and LaRae Smith—are competing for two available spots. Capizola, a former appointee to the Board, 
-            and Balicki, a respected immigration attorney, have both indicated they plan to complete a public questionnaire and participate in an interview. However, neither has 
-            followed through at this time. In contrast, LaRae Smith has released a detailed campaign platform and scheduled a podcast-style interview, reflecting a significant 
-            step forward in transparency and voter outreach. 
-            <br>
-            <br>
-            Unfortunately, the local Democratic Party infrastructure continues to hinder public engagement. The county party’s website still lists no events—neither for endorsed 
-            candidates nor for the rest of the field—making it difficult for residents to find or attend campaign events. This absence not only affects unaffiliated candidates like 
-            Smith, but also makes it harder for endorsed candidates to demonstrate public accessibility. In 2025, this kind of organizational lapse remains a barrier to meaningful 
-            civic participation. 
-            <br>
-            <br>
-            With the primary fast approaching, Democratic candidates are running out of time to connect with voters. Republican candidates, while unopposed for now, should not take 
-            their general election runway for granted. Regardless of party, voters deserve clear agendas, stances on well-known county issues, and an opportunity to compare candidates 
-            beyond party labels. After years of outreach and documentation, we’ve learned to track progress where it exists—and keep asking questions where it doesn’t.
+          Two seats are open on the Cumberland County Board of Commissioners. On the Republican side, incumbents Doug Albrecht and Victoria Lods are running unopposed in the primary.
+          While both attend the bi-weekly Republican breakfast meetings, the nature of those events has recently shifted. When InformTheVoteNJ began its voter education efforts 
+          two years ago, these breakfasts were presented as inclusive, civic-minded gatherings—welcoming Democrats, independents, and members of the press. After a recent article 
+          raised concerns about transparency in a local race that went unacknowledged at a township meet-and-greet, it was publicly stated at the breakfast that Democrats and the 
+          press would no longer be allowed to attend. Although I remain a registered Republican, my role in documenting these races now places me outside that circle. While the 
+          meetings still serve as a venue for regular updates and familiar Republican messaging among party loyalists, they no longer function as open forums for civic discourse 
+          across the political spectrum.
+          <br>
+          <br>
+          Commissioner Albrecht has since completed a radio interview with InformTheVoteNJ following our podcast-style interview with Democratic candidate LaRae Smith. Commissioner 
+          Lods, for her part, has not responded to any outreach attempts.
+          <br>
+          <br>
+          On the Democratic side, three candidates—John Capizola, Yolanda Balicki, and LaRae Smith—are competing for two available spots. Capizola, a former appointee to the Board, 
+          and Balicki, a respected immigration attorney, initially expressed interest in participating through their campaign manager Rick Dawson. However, a significant amount of 
+          time has passed without follow-through, and it now appears they are no longer interested in participating in this public-facing transparency effort.
+          <br>
+          <br>
+          In contrast, LaRae Smith has released a detailed campaign platform, launched a campaign website with scheduled public events, and recorded a full interview—setting a clear 
+          standard for accessibility and voter outreach.
+          <br>
+          <br>
+          Unfortunately, the local Democratic Party infrastructure continues to hinder broader public engagement. The county party’s website currently lists no events—not for 
+          endorsed candidates, nor for unendorsed ones—making it difficult for even loyal party members to stay informed or attend campaign activities. While the Republican 
+          breakfasts have narrowed in scope to party insiders, they are at least still functioning as a regular forum for internal updates. The local Democratic Party lacks even 
+          that level of organizational consistency, leaving their endorsed candidates with few visible avenues for voter connection or accountability.
+          <br>
+          <br>
+          With the primary fast approaching, endorsed Democratic candidates are running out of time to connect with voters, and Republican candidates—despite being unopposed—should 
+          not take their general election runway for granted. Regardless of party, voters deserve clear agendas, direct responses on well-known county issues, and a chance to 
+          compare candidates beyond party labels. After years of outreach and documentation, InformTheVoteNJ continues to track progress where it exists—and keep asking questions 
+          where it doesn’t.
           <br>
           <br>
           Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
