county transparency summary update

--- a/child_pages/cc-elections/county_commissioners_transparency_chart.html
+++ b/child_pages/cc-elections/county_commissioners_transparency_chart.html
@@ -188,21 +188,25 @@
         <h2>Quick Transparency Breakdown</h2>
         <div class="summary-note">
           Two seats are open on the Cumberland County Board of Commissioners. While Republican incumbents Doug Albrecht and Victoria Lods are running unopposed in the primary, 
-          they continue to benefit from regular public visibility through bi-weekly GOP breakfasts. This visibility, paired with their incumbency, gives them an edge—not just in name 
-          recognition but in familiarity with ongoing county issues. However, as we’ve learned over two years of pursuing comprehensive campaign coverage, there are many underexplored 
-          layers in county governance that deserve more clarity during election season.
+          their visibility remains strong thanks to their incumbency and continued participation in bi-weekly Republican breakfasts. However, it’s important to note that the 
+          nature of those events has recently changed. Once open to Democrats and members of the press, they are now restricted to party loyalists only—limiting public access 
+          to what was previously a more inclusive civic forum. Still, the meetings offer regular policy and project updates for attendees, which maintains some form of 
+          communication within the party.
           <br><br>
-          We recently did a radio interview with Commissioner Albrecht.  While this was certainly a significant step in the right direction, Albrecht is uniquely positioned as the longest 
-          serving commissioner, so he has a wealth of knowledge that could be shared beyond that interview. We hope that Albrecht and Lods continue in the direction of volunteering 
-          comprehensive information so it can be shared in one information hub like this website. It would certainly continue to set them apart from some of their democrat challengers.
+          We recently conducted a radio interview with Commissioner Albrecht, which marked a meaningful step toward public transparency. As the longest-serving commissioner, 
+          Albrecht holds a unique position to explain complex issues that often fly under the radar. We encourage him—and Commissioner Lods—to continue making comprehensive 
+          information available in centralized formats like InformTheVoteNJ.com, where voters from all backgrounds can benefit. Doing so would further distinguish them from 
+          some of their Democratic challengers who have yet to engage publicly.
           <br><br>
-          On the Democratic side, the three candidates—John Capizola, Yolanda Balicki, and LaRae Smith—are in various stages of engagement. Capizola and Balicki initially agreed to 
-          complete a questionnaire and sit for an interview, but have yet to follow through. In contrast, Smith has released a clear platform, participated in a full interview, 
-          and demonstrated continued commitment to transparency, despite being unaffiliated with the local party’s limited digital infrastructure.
+          On the Democratic side, candidates John Capizola, Yolanda Balicki, and LaRae Smith are in different phases of outreach. Capizola and Balicki initially committed to 
+          completing a questionnaire and scheduling an interview through their campaign manager, but no progress has been made in the weeks since. In contrast, Smith has 
+          demonstrated a consistent commitment to voter transparency: she released a detailed campaign platform, launched a public-facing website with event listings, and 
+          participated in a full-length interview.
           <br><br>
-          Notably, the Cumberland County Democratic Party has yet to post any 2025 event listings or candidate visibility efforts online—not even for their endorsed slate. This lack 
-          of coordination risks leaving voters in the dark just weeks before the primary. Regardless of party affiliation, basic campaign information should be easy to find in 
-          2025—not hidden behind inconsistent communication or outdated outreach practices.
+          Notably, the Cumberland County Democratic Party has yet to post any 2025 event listings or candidate updates on its website—not even for its endorsed slate. While the 
+          Republican Party has at least maintained regular internal meetings, the Democratic Party currently offers no consistent structure for keeping even loyal supporters 
+          informed, let alone the broader public. In an election cycle as consequential as this one, basic campaign information should not be hidden behind outdated outreach 
+          practices or limited digital footprints.
           <br><br>
           As a reminder, our outreach process includes mailed letters and emails sent to candidate-provided addresses through the County Clerk, regular attendance at campaign 
           events and political meetings, online searches for each candidate, and ongoing efforts to encourage transparency at the county level. We have also urged state lawmakers 
@@ -253,10 +257,10 @@
           
           <div class="candidate-card">
             <h3>LaRae Smith</h3>
-            <span class="label">Public Platform:</span><span class="value">✅ Released updated agenda and background</span>
-            <span class="label">Response to Outreach:</span><span class="value">✅ Conpleted Campaign Interview</span>
+            <span class="label">Public Platform:</span><span class="value">✅ Released updated agenda, background, and website</span>
+            <span class="label">Response to Outreach:</span><span class="value">✅ Conpleted Campaign Interview and gives us regular updates</span>
             <span class="label">Voter Info Participation:</span><span class="value">✅ Platform published, interview published</span>
-            <span class="label">Public Appearances:</span><span class="value">⚠️ No events advertised, impacted by lack of party infrastructure</span>
+            <span class="label">Public Appearances:</span><span class="value">✅ Several May events posted, June events TBA</span>
             <span class="label">Local Issue Messaging:</span><span class="value">✅ Documented through platform submission</span>
             <div class="rating">Rating: <strong>Moderate and improving</strong></div>
           </div>
