--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -130,18 +130,28 @@
               <h6 class="page-title">John P. Capizola</h6>
               <p>          
 
-                John Capizola, Jr., a former Cumberland County Commissioner and longtime educator, is once again seeking office—this time on a joint Democratic ticket with attorney Yolanda 
-                Garcia Balicki. The pair recently launched a Facebook page, emphasizing their goal to “restore a successful county government” through the lens of past Democratic leadership: 
-                low taxes, private-sector growth, and expanded educational programs.
+                John Capizola, Jr., a former Cumberland County Commissioner and longtime educator, is once again seeking office—this time on a joint Democratic ticket with attorney 
+                Yolanda Garcia Balicki. The pair launched a Facebook page emphasizing their goal to “restore a successful county government” modeled on previous Democratic 
+                leadership: lower taxes, private-sector growth, and expanded education programs.
                 <br>
                 <br>
-                Capizola previously emphasized fiscal responsibility, infrastructure, and education as policy priorities. However, like his running mate, his current platform lacks detailed 
-                updates. Aside from general messaging, there are few specifics about where he stands today or how his views compare to Republican opponents.
+                While those goals are broadly appealing, the campaign has yet to offer voters clear specifics. As of this writing, there are no event listings on the county 
+                party’s official website, no substantial policy breakdowns on their joint Facebook page, and only sparse mentions of public appearances—such as a same-day post from 
+                Balicki about greeting voters at a local flea market with no time specified. Voters hoping to learn more are instead met with general political commentary and 
+                distractions on the Democrat facebook group from party and campaign affiliates, rather than useful, local election material. For engaged 
+                residents trying to stay informed, this kind of digital noise adds to the challenge of getting straight answers.
                 <br>
                 <br>
-                Given that two commissioner seats are open and only three Democrats are competing, at least one—possibly both—of these candidates will likely move on to the general election. 
-                That dynamic raises the bar for transparency and preparedness, and voters deserve to see not only biographical qualifications, but also clear positions on county-specific 
-                challenges and how these candidates plan to address them in contrast with the incumbents.
+                It’s important to clarify: this isn’t about picking on any one candidate. But in Capizola’s case, a little tension over the years has emerged—not necessarily 
+                from personal conflict, but from a pattern of non-engagement. His prior appointment to the Board of Commissioners wasn’t the result of an election, and in an 
+                environment where transparency matters, a clearer explanation of why he was appointed—and what he did with that opportunity—feels warranted. When a candidate has 
+                the advantage of incumbency or prior experience, it’s reasonable for voters to expect a corresponding willingness to participate in open forums and respond to 
+                outreach. So far, that hasn’t materialized.
+                <br>
+                <br>
+                With two commissioner seats open and only three Democrats in the race, Capizola is statistically likely to appear on the general election ballot. That reality 
+                raises expectations. Voters deserve more than a résumé—they deserve clarity on policy, meaningful contrasts with the Republican incumbents, and reliable 
+                communication that invites public accountability.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
