balicki quick summary update

--- a/child_pages/cc-elections/Candidates/balicki.html
+++ b/child_pages/cc-elections/Candidates/balicki.html
@@ -124,19 +124,27 @@
               <h6 class="page-title">Yolanda Balicki</h6>
               <p>          
 
-                Yolanda Garcia Balicki, a veteran attorney and former Deputy Executive Director of the NJ State Parole Board, is campaigning alongside former Commissioner John Capizola, Jr. as 
-                part of a Democratic ticket for Cumberland County Commissioner. Balicki brings decades of public service, civic involvement, and legal expertise—particularly in immigration law 
-                and educational advocacy.
+                Yolanda Garcia Balicki, a veteran attorney and former Deputy Executive Director of the NJ State Parole Board, is running alongside former Commissioner John 
+                Capizola, Jr. as part of a Democratic ticket for Cumberland County Commissioner. Balicki brings a notable résumé, with decades of public service, civic 
+                involvement, and legal work—particularly in immigration law and educational advocacy.
                 <br>
                 <br>
-                While her resume remains strong, updated campaign materials remain sparse. The ticket has launched a Facebook page highlighting a desire to “restore a successful county 
-                government,” claiming prior Democratic leadership’s fiscal stability, job growth, and education improvements. However, there is still no clear issue-based platform or detailed stance 
-                on key county concerns.
+                However, a strong professional background is not a substitute for campaign transparency, and voters looking for detailed stances from Balicki may be left wanting. 
+                As of now, her campaign—jointly run with Capizola—has provided only general messaging via a shared Facebook page. The page references the desire to “restore a 
+                successful county government” in the spirit of prior Democratic leadership, but lacks specifics on current county issues like infrastructure, social services, 
+                economic development, or transparency itself. A recent social media post indicated she would be meeting voters at a flea market, but the post was same-day and didn’t 
+                list a time, leaving little chance for voters to engage unless they happened to be there already.
                 <br>
                 <br>
-                It’s also worth noting that although this is technically a primary race, two seats are open and only three Democrats are running—meaning at least one and potentially both of these 
-                candidates are likely to advance to the general election. In that context, voters would reasonably expect the candidates to offer more robust platforms, direct comparisons to 
-                their likely opponents, and clear messaging on well-known county issues.
+                Given her experience, one would hope for a more organized and accessible campaign effort. Instead, voters are left piecing things together while the campaign’s 
+                online presence remains mostly dormant, and the local party infrastructure offers no supplemental visibility. The party website still lists no events, and the 
+                candidates’ digital channels are largely silent on meaningful local policy.
+                <br>
+                <br>
+                This is not a personal critique—it’s a civic observation. Balicki is one of only three Democrats competing for two seats, meaning she is likely to advance to the 
+                general election. That inevitability raises the bar for engagement. Voters deserve to hear directly from candidates on how they would lead, what differentiates them 
+                from their Republican opponents, and how they plan to address the well-documented challenges Cumberland County faces. The experience is there—but the communication 
+                isn’t.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
